--- a/Practice01/package.json
+++ b/Practice01/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel":"^2.9.3"
+    "node-sass": "^9.0.0",
+    "parcel": "^2.9.3"
   }
 }
